# location-insights

./: .env  Cargo.toml
migrations/: 20250505131549_create_countries_and_cities.sql
src/: app.rs  config.rs  main.rs
src/clients/: geo.rs
src/db/: city_repository.rs  country_repository.rs  mod.rs
src/routes/: city.rs  country.rs  health.rs  mod.rs
src/services/: city_service.rs  country_service.rs  mod.rs
src/shared/: api_clients.rs  errors.rs  mod.rs
